# routes/index.js
@@ -1,8 +1,6 @@
 const router = require('express').Router();
 
 router.get('/', (req, res) => {res.send('Hello, world!')});
-
-
-router.use('/users', require('./users'));
+router.use('/contacts', require('./contacts'));
 
 module.exports = router;
